# soft_delete

./: README.md  pyproject.toml
src/karthiksp_softdelete.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/soft_delete/: delete_history.py  models.py
